<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_complete"
          android:title="@string/mark_as_completed"
          android:icon="@android:drawable/ic_menu_my_calendar"
          app:showAsAction="ifRoom"
          android:checkable="true"/>
    <item android:id="@+id/action_urgent"
          android:title="@string/mark_as_urgent"
          android:icon="@android:drawable/ic_menu_my_calendar"
          app:showAsAction="ifRoom"
          android:checkable="true"/>
    <item android:id="@+id/action_datetime"
          android:title="@string/set_due_date_time"
          android:icon="@android:drawable/ic_menu_my_calendar"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_list"
          android:title="@string/assign_to_task_list"
          android:icon="@android:drawable/ic_menu_my_calendar"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_expand"
          android:title="@string/open_full_window"
          android:icon="@android:drawable/ic_menu_my_calendar"
          app:showAsAction="ifRoom"/>
</menu>