<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".CreateEditTaskActivity">

    <item android:id="@+id/action_complete"
          android:title="@string/mark_as_completed"
          android:icon="@drawable/action_bar_checkbox"
          android:checkable="true"
          app:showAsAction="always"/>
    <item android:id="@+id/action_urgent"
          android:title="@string/mark_as_urgent"
          android:icon="@android:drawable/stat_sys_warning"
          android:checkable="true"
          app:showAsAction="always"/>
    <!--Delete action not visible by default-->
    <item android:id="@+id/action_delete"
          android:title="@string/delete"
          android:icon="@android:drawable/ic_menu_delete"
          android:visible="false"
          app:showAsAction="always"/>
    <item android:id="@+id/action_save"
          android:title="@string/save"
          app:showAsAction="always|withText"/>
</menu>
