<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_done"
        android:title="@string/mark_done"
        android:icon="@drawable/action_bar_checkbox"
        android:checkable="true"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_important"
        android:title="@string/mark_important"
        android:icon="@android:drawable/stat_sys_warning"
        android:checkable="true"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_delete"
        android:title="@string/delete"
          android:orderInCategory="1"
        app:showAsAction="never"/>
    <item android:id="@+id/change_history_view"
          android:title="Change history view"
          app:showAsAction="never"
          android:orderInCategory="0"
          android:visible="false"/>
</menu>
