<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:layout_marginTop="?attr/actionBarSize"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="8dp"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/task_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_task"
                        android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
                        android:maxLines="3"
                        android:textColor="@android:color/white"/>

                </android.support.design.widget.TextInputLayout>

                <EditText
                    android:id="@+id/list_selection"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/hint_select_list"
                    android:textSize="12sp"
                    android:background="?android:selectableItemBackground"
                    android:drawableStart="@android:drawable/radiobutton_off_background"
                    android:drawablePadding="8dp"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:cursorVisible="false"
                    android:textColor="@android:color/white"/>

                <EditText
                    android:id="@+id/date_selection"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/hint_no_due_date"
                    android:textSize="12sp"
                    android:background="?android:selectableItemBackground"
                    android:drawableStart="@android:drawable/radiobutton_off_background"
                    android:drawablePadding="8dp"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:cursorVisible="false"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                android:layout_gravity="top"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp">

            <RelativeLayout
                android:id="@+id/action_items_layout"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true">

                <ImageView
                    android:id="@+id/action_items_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@android:drawable/ic_menu_my_calendar"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="24dp"/>

                <TextView
                    android:id="@+id/action_items_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_items"
                    android:textSize="20sp"
                    android:layout_toEndOf="@id/action_items_icon"
                    android:layout_marginEnd="16dp"/>

                <View
                    android:layout_width="36dp"
                    android:layout_height="18dp"
                    android:background="?attr/colorAccent"
                    android:layout_toEndOf="@id/action_items_label" />

                <TextView
                    android:id="@+id/action_items_changed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CHANGES MADE"
                    android:visibility="gone"
                    android:layout_below="@id/action_items_label"
                    android:layout_toEndOf="@id/action_items_icon"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/history_layout"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true">

                <ImageView
                    android:id="@+id/history_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@android:drawable/ic_menu_my_calendar"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="24dp"/>

                <TextView
                    android:id="@+id/history_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:textSize="20sp"
                    android:layout_toEndOf="@id/history_icon"/>

                <TextView
                    android:id="@+id/last_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/history_icon"
                    android:layout_below="@id/history_label"/>

                <TextView
                    android:id="@+id/history_changed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CHANGES MADE"
                    android:visibility="gone"
                    android:layout_below="@id/last_activity"
                    android:layout_toEndOf="@id/history_icon"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/stats_layout"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true">

                <ImageView
                    android:id="@+id/stats_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@android:drawable/ic_menu_my_calendar"
                    android:layout_alignParentStart="true"
                    android:layout_marginEnd="24dp"/>

                <TextView
                    android:id="@+id/stats_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/statistics"
                    android:textSize="20sp"
                    android:layout_toEndOf="@id/stats_icon"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"
        android:src="@android:drawable/ic_menu_save"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="Start timing"
        android:layout_gravity="bottom"/>

</android.support.design.widget.CoordinatorLayout>